--- a/web/index.html
+++ b/web/index.html
@@ -14,8 +14,9 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="$FLUTTER_BASE_HREF">
 
+  <base href="$FLUTTER_BASE_HREF">
+  <meta name="google-signin-client_id" content="396028047426-9rv4sl67v3s6ookinqn3n8haam9r95r1.apps.googleusercontent.com">
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
